gap on front page images fixed

--- a/src/sass/layout/_newoffers.scss
+++ b/src/sass/layout/_newoffers.scss
@@ -36,7 +36,7 @@
 .thumbnail_img {
   display: flex;
   flex-direction: column;
-  width: 48vw;
+  width: 60vw;
   height: 75vh;
   box-shadow: effects.$boxShadowImage;
 }
@@ -174,7 +174,7 @@
   .thumbnail_img {
     display: flex;
     flex-direction: column;
-    width: 44vw;
+    width: 55vw;
     height: 80vh;
     box-shadow: effects.$boxShadowImage;
   }
